--- a/diving-into-the-basics/basics-04-understanding-inheritance-finished/index.html
+++ b/diving-into-the-basics/basics-04-understanding-inheritance-finished/index.html
@@ -7,6 +7,7 @@
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <!-- This is the bold version of the Montserrat google font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
